@@ -46,6 +46,9 @@
 - (NSImage *)fileNameIconImage;
 - (NSString *)fileNameIconTitle;
 - (BOOL)canPerformDraggingOf:(NSArray *)paths;
+- (BOOL)prepareForDraggingOf:(NSArray *)paths;
+- (BOOL)performDraggingOf:(NSArray *)paths;
+- (BOOL)concludeDraggingOf:(NSArray *)paths;
 
 @end
 
